--- a/backend/package.json
+++ b/backend/package.json
@@ -5,5 +5,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0"
+  },
+  "devDependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
